--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "export": "nuxt generate",
     "serve": "nuxt start",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "deploy": " push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/content": "^1.11.1",
@@ -24,6 +25,7 @@
     "nuxt": "^2.13.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
+    "push-dir": "^0.4.1",
     "querystring": "^0.2.0",
     "rfs": "^9.0.3",
     "swiper": "^6.4.15",
