--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "generate": "nuxt build && nuxt generate",
     "export": "nuxt generate",
     "serve": "nuxt start",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
     "lint": "npm run lint:js",
+    "lint-fix": "eslint --fix",
     "deploy": "npm run generate && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
